Report Page (In Progress)

--- a/Frontend/src/Containers/NgosPage/NgosPage.scss
+++ b/Frontend/src/Containers/NgosPage/NgosPage.scss
@@ -1,7 +1,9 @@
 .NgosPage{
-    width: 90%;
-    margin: auto;
+    padding-left: 5%;
+    padding-right: 5%;
     padding-top: 10vh;
+    padding-bottom: 50px;
+    background-color: white;
     .Hero{
         display: flex;
         .dog{
